# Book_HTHON

./: .env.example  .gitignore  .railway-deploy  .railway-force  .vercel-trigger  404.html  CLAUDE.md  DEPLOYMENT-STATUS.md  DEPLOYMENT.md  NEXT_STEPS.md  PRODUCTION-VERIFICATION-CHECKLIST.md  QUICK-CHECK-GUIDE.md  TESTING-AUTH-FLOW.md  VERCEL-AUTH-DEPLOYMENT-COMPLETE.md  VERCEL-DEPLOYMENT-CHECKLIST.md  docusaurus.config.ts  index.html  package-lock.json  package.json  sidebars.ts  sitemap.xml  vercel.json
.github/workflows/: deploy.yml
.specify/memory/: constitution.md
assets/css/: styles.801ad4bf.css  styles.8fa425c6.css  styles.d705f0a2.css
assets/js/: 0058b4c6.e43efd4b.js  01e963ec.917473d7.js  0c0fbaf6.4a526e80.js  0c0fbaf6.ffe9b75e.js  0e384e19.0a8f7df0.js  0e384e19.3ebb5664.js  17896441.71b9c134.js  1df93b7f.2bc5b2ab.js  1df93b7f.6aac4ed3.js  237.6a23170d.js  237.86e3aa43.js  34b338d8.8e70aaf2.js  34b338d8.8ea9f11d.js  4a90598f.1ab4e2e7.js  4a90598f.570dfdaf.js  4dd5b0c3.def932d8.js  4dd5b0c3.edddbc31.js  5e95c892.05b82029.js  5e95c892.8842c795.js  8113467f.32b714ea.js  (+43 more)
auth-service/: .env.example  .gitignore  .vercelignore  README-VERCEL-DEPLOY.md  migration.sql  package-lock.json  package.json  vercel.json
backend/: .env.example  .gitignore  DEPLOYMENT.md  README.md  RESEARCH_CONTENT_PERSONALIZATION.md  agent.py  api.py  database.py  dependencies.py  main.py  pyproject.toml  query_test.py  requirements.txt  test_retrieval.py  verify_qdrant.py
docs/: intro.md
login/: index.html
profile/: index.html
profile-setup/: index.html
signup/: index.html
(+122 files in other folders)
